# ls

./: .gitignore
js229/__MACOSX/: ._utility_library
ls202/: my.css  profile.html
ls202/practice/: 1.css  1.html  2.css  2.html  3.css  3.html  4.css  4.html  5.html  6.css  6.html
py101/easy1/: 10.py  11.py  7.py  8.py
py101/easy2/: 1.py  12.py  2.py  5.py  6.py  7.py
py101/easy3/: 2.py  7.py
py101/lesson2/: calculator.py  calculator_messages.json  mortgage.py  rock_paper_scissors.py
py110/advanced/: 1.py  2.py  3.py  4.py
py110/debugging/: 2.py  3.py  4.py  6.py  7.py  8.py  9.py
py110/easy1/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
py110/easy2/: 1.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
py110/easy3/: 1.py  10.py  2.py  3.py  4.py  5.py  7.py  8.py  9.py
py110/easy4/: 1.py  4.py  6.py  7.py  8.py  9.py
py110/easy5/: 10.py  2.py  3.py  4.py  6.py  7.py  8.py  9.py
py110/itwpractice/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
py110/lesson1/: consonants.py  leftover_blocks.py  palindromes.py  palindromes2.py  pedac.py  pedac2.py
py110/lesson3/: defense.py  (+3 more)
py120/: class.py  inheritance.py  person.py  problems.py  rps.py
py175/: counter_app.py  echo_server.py
py175/cms/: app.py  pyproject.toml
py175/cms/cms/: users.yml
py175/cms/static/stylesheets/: app.css  application.css
py175/cms/templates/: edit.html  index.html  layout.html  new.html
py175/cms/tests/: test_app.py  users.yml
py185/my_films/: app.py  pyproject.toml
(+76 files in other folders)
