[project]
name = "my-films"
version = "0.1.0"
description = ""
authors = [
    {name = "Hubert de Parseval",email = "hp98@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
